--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,12 @@ services:
 
   client:
     image: rebus/client
-    build: ./client/.
+    build: client/.
     environment:
       - GRAPHQL_ENDPOINT=http://api:3000/graphql
     ports:
       - 80:3000 # maybe this should be on another port?
+      - 35729:35729
 
   mongo:
     image: mongo
