--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,8 @@
     "express-jwt": "5.3.0",
     "graphql": "0.11.7",
     "graphql-tools": "2.8.0",
+    "graphql-subscriptions": "0.5.7",
+    "subscriptions-transport-ws": "0.9.5",
     "jsonwebtoken": "8.1.0",
     "moment": "2.20.1",
     "mongodb": "3.0.1",
