Mutation login implemented, logs user in and creates user object if necessary

--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,6 @@
     "moment": "2.20.1",
     "mongodb": "3.0.1",
     "mongoose": "5.0.4",
-    "request": "~2.83.0",
-    "fb": "2.0.0"
+    "request": "~2.83.0"
   }
 }
