--- a/api/package.json
+++ b/api/package.json
@@ -22,12 +22,14 @@
     "graphql": "0.11.7",
     "graphql-tools": "2.8.0",
     "graphql-subscriptions": "0.5.7",
+    "graphql-redis-subscriptions":"~1.4.0",
+    "ioredis": "~3.2.2",
     "subscriptions-transport-ws": "0.9.5",
     "jsonwebtoken": "8.1.0",
     "moment": "2.20.1",
     "mongodb": "3.0.1",
     "mongoose": "5.0.4",
     "request": "~2.83.0",
-    "fb": "2.0.0"
+    "random-text-faces": "~1.0.7"
   }
 }
