--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.0"
+  },
+  "dependencies": {
+    "material-ui": "^0.20.0",
+    "react-router-dom": "^4.2.2"
   }
 }
