--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.0"
   },
-  "dependencies": {
-    "material-ui": "^0.20.0",
-    "react-router-dom": "^4.2.2"
-  }
+  "dependencies": {}
 }
