Add compose files for production

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,22 +1,18 @@
-# Base compose file for Values Match backend
-# Only defines stuff that is the same, both in development and production.
-#
-# For development it will automatically be use together with docker-compose.override.yml which defines
-# volumes to be mounted.
-# cmd: docker-compose up -d --build
-#
-# For production it will be used together with docker-compose.production.yml which defines environment variables
-# and extra logging services.
-# cmd: docker-compose -f docker-compose.yml -f docker-compose.production.yml
-
-
 version: '3'
 services:
   api:
     command: "npm run dev"
+    environment:
+      - MONGO_URL=mongodb://mongo/rebus
+      - PORT=3000
+      - EXTERNAL_PORT=3000
+      - EXTERNAL_HOST=api
     volumes:
       - "./api/src:/app/src"
 
   client:
+    environment:
+      - GRAPHQL_HTTP_ENDPOINT=http://api:3000/graphql
+      - GRAPHQL_WS_ENDPOINT=ws://api:3000/subscriptions
     volumes:
       - "./client:/app"
