--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# Base compose file for Values Match backend
+# Base compose file for Rebus
 # Only defines stuff that is the same, both in development and production.
 #
 # For development it will automatically be use together with docker-compose.override.yml which defines
@@ -15,11 +15,6 @@ services:
   api:
     image: rebus/api
     build: ./api/.
-    environment:
-      - MONGO_URL=mongodb://mongo/rebus
-      - PORT=3000
-      - EXTERNAL_PORT=3000
-      - EXTERNAL_HOST=localhost
     ports:
       - 3000:3000
 
@@ -27,10 +22,8 @@ services:
   client:
     image: rebus/client
     build: client/.
-    environment:
-      - GRAPHQL_ENDPOINT=http://api:3000/graphql
     ports:
-      - 80:3000 # maybe this should be on another port?
+      - 3000:3000 # maybe this should be on another port?
       - 35729:35729
 
   mongo:
