--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "material-ui": "^0.20.0"
+  }
 }
