--- a/api/package.json
+++ b/api/package.json
@@ -17,19 +17,20 @@
   "dependencies": {
     "apollo-server-express": "1.2.0",
     "body-parser": "1.18.2",
+    "cors": "^2.8.4",
     "express": "4.16.1",
     "express-jwt": "5.3.0",
     "graphql": "0.11.7",
-    "graphql-tools": "2.8.0",
+    "graphql-redis-subscriptions": "~1.4.0",
     "graphql-subscriptions": "0.5.7",
-    "graphql-redis-subscriptions":"~1.4.0",
+    "graphql-tools": "2.8.0",
     "ioredis": "~3.2.2",
-    "subscriptions-transport-ws": "0.9.5",
     "jsonwebtoken": "8.1.0",
     "moment": "2.20.1",
     "mongodb": "3.0.1",
     "mongoose": "5.0.4",
+    "random-text-faces": "~1.0.7",
     "request": "~2.83.0",
-    "random-text-faces": "~1.0.7"
+    "subscriptions-transport-ws": "0.9.5"
   }
 }
