--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "react-facebook-login": "^4.0.1",
     "react-router-dom": "^4.2.2",
     "style-loader": "0.19.0",
+    "subscriptions-transport-ws": "^0.9.6",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
