--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "mongodb": "3.0.1",
     "mongoose": "5.0.4",
     "request": "~2.83.0",
-    "random-text-faces": "~1.0.7"
+    "random-text-faces": "~1.0.7",
+    "giphy-js-sdk-core": "^1.0.3"
   }
 }
