--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,7 @@
     "graphql": "^0.13.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.36",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
