--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "apollo-server-express": "1.2.0",
     "body-parser": "1.18.2",
+    "cors": "^2.8.4",
     "express": "4.16.1",
     "express-jwt": "5.3.0",
     "giphy-js-sdk-core": "^1.0.3",
