--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.1",
+    "apollo-client-preset": "^1.0.8",
+    "apollo-link-ws": "^1.0.7",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -25,19 +28,23 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "graphql": "^0.13.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.36",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-apollo": "^2.1.0-beta.3",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-facebook-login": "^4.0.1",
     "react-router-dom": "^4.2.2",
     "style-loader": "0.19.0",
+    "subscriptions-transport-ws": "^0.9.6",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
