--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,7 +6,7 @@ ADD package.json /package.json
 
 ENV NODE_PATH=/node_modules
 ENV PATH=$PATH:/node_modules/.bin
-RUN yarn
+RUN yarn install
 
 WORKDIR /app
 ADD . /app
